--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <script>
         function checkPassword() {
             var password = document.getElementById('password').value;
-            var correctPassword = 'yourPassword'; 
+            var correctPassword = '8964'; 
             if (password === correctPassword) {
-                window.location.href = 'https://postimg.cc/3kdZhy01'; 
+                window.location.href = atob( "aHR0cHM6Ly9wb3N0aW1nLmNjLzNrZFpoeTAx");
             } else {
                 alert('密码错误，请重新输入。');
             }
